Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85982 Android applications and examples build on Qt 6.0 with cmake
  3. QTBUG-87131

QC not using deployment-settings.json file generated by CMake

    XMLWordPrintable

Details

    • Android
    • 2020wk36, 2020wk38, 2020wk40, 2020wk42, 2020wk44

    Description

      When building Qt for Android 6.0.0 with CMake, CMake generates  android-<project_name>-deployment-settings.json which is used by androiddeployqt. However, QC doesn't use that and generates its own version, which doesn't have some values like qmlimportscanner and rcc paths, thus building a qt quick project will fail.

       

      QC must not try to generate its version of deployment-settings.json, it should use the existing one.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              assam Assam Boudjelthia
              assam Assam Boudjelthia
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews