Android: use correct variable for Android SDK with CMake for Qt 6

Qt 6 for Android with CMake uses ANDROID_SDK_ROOT (similar to qmake),
instead of ANDROID_SDK.

Task-number: QTCREATORBUG-24678
Change-Id: Ic858b8d76b41b57ef35864a1981ebd142d0cccfd
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>